# allocator-agent

./: .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
agents/allocator/: __init__.py  agent.py  config.yaml  console.py  db.py  export.py  http.py  main.py  models.py  tools.py
agents/allocator/data/: russell2000_symbols.json  russell3000_symbols.json  sp500_symbols.json
agents/allocator/prompts/: analyzer.yaml  classifier.yaml  extract_criteria.yaml  extract_symbol.yaml  screener.yaml  similarity.yaml
allocator/: __init__.py  agent.py  config.yaml  console.py  export.py  main.py  models.py  tools.py
allocator/prompts/: analyzer.yaml  similarity.yaml
scripts/: download_market_data.py  download_symbols.py  refresh_market_data.py
