[project]
name = "allocator-agent"
version = "0.1.0"
description = "AI agent for capital allocation and stock analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-kit @ git+https://github.com/pradeepiyer/agent-kit.git",
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    "aiohttp>=3.12.15",
    "reportlab>=4.0.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
allocator-agent = "agents.allocator.main:main"

[project.optional-dependencies]
data = [
    "lxml>=5.0.0",
    "html5lib>=1.1",
    "tqdm>=4.66.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[tool.uv]
package = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agents*"]

[tool.setuptools.package-data]
"agents.allocator" = [
    "*.yaml",
    "prompts/**/*.yaml",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = ["E501"]  # Line too long - handled by formatter
